--- a/Biodata.html
+++ b/Biodata.html
@@ -63,7 +63,7 @@
     <ul>
         <li>Menjadi Cyber Security</li>
         <li>Berkerja Dalam Bidang Suatu Perusahaan Terkait Teknologi</li>
-        <li>Menjadi Black Head</li>
+        <li>Menjadi Black Hat</li>
     </ul>
     <a class="Hover" href="index.html"><- Kembali Ke Halaman Utama</a>
 </div>  
